improve endpoints
